--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <div class="container">
         <div class="gameboard">
-            <div class="square" id="1">X</div>
-            <div class="square" id="2">O</div>
-            <div class="square" id="3">X</div>
+            <div class="square" id="1"></div>
+            <div class="square" id="2"></div>
+            <div class="square" id="3"></div>
             <div class="square" id="4"></div>
             <div class="square" id="5"></div>
             <div class="square" id="6"></div>
